                     schema updates to existing collections, update schema update CLI with compare methods.
 11-Feb-2020  V0.963 Expose upsertFlag on mongo update method wrapper.
 12-Feb-2020  V0.964 Extend entity and entity instance annotations with convalent linkage details
 12-Feb-2020  V0.965 Add model_ids to entry_container_identifiers and update dependencies
 14-Feb-2020  V0.966 Add MongoDb maintenance operations, point example config to development branch assets, update enums with
                     BIRD_MOLECULE_NAME.
 19-Feb-2020  V0.967 Initialize zero values for feature counts and coverage
 26-Feb-2020  V0.968 Add missing provenance source for rcsb_chem_comp_synonyms, filter case duplicates for taxonomy common
                     names, entity descriptions, and gene names.
  5-Mar-2020  V0.969 Allow category nested contexts and remote tests for uniprot-core
 17-Mar-2020  V0.970 Add separate primary citation category and offset for zero based sequence database references
 24-Mar-2020  V0.971 Add support for rcsb_chem_comp_annotation and various fixes for schema builder.
 27-Mar-2020  V0.972 Add support for rcsb_repository_holdings_removed.repository_content_types
  1-Apr-2020  V0.973 Add test cases for pdbx_audit_revision_details.description
  1-Apr-2020  V0.974 Add test cases for RESID annotations
  5-Apr-2020  V0.975 Adjustments to logging details for sequence processing
  7-Apr-2020  V0.976 Add min/max for consolidated diffraction wavelength details
  8-Apr-2020  V0.977 Adjust handling of nested contexts for subcategories.
 17-Apr-2020  V0.978 Add rcsb_accession_info.has_released_experimental_data
 27-Apr-2020  V0.979 Adjustments for remediated carbohydrate data files, leave BIRD_* annotations solely in definition collections.
 30-Apr-2020  V0.980 New NMR repo holdings content types, specific configuration option added for ed maps list